<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:layout_marginBottom="16dp">

        <ImageView
            android:id="@+id/header"
            android:layout_width="0dp"
            android:layout_height="135dp"
            android:background="@drawable/bottom_rounded"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_item_user"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="6dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.85">

            <RelativeLayout
                android:id="@+id/rl_item_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_img"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="12dp"
                    app:cardCornerRadius="8dp">

                    <ImageView
                        android:id="@+id/img_item_photo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:src="@tools:sample/avatars" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tv_item_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/cv_img"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="8dp"
                    android:layout_toEndOf="@+id/cv_img"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="@string/github_name" />

                <TextView
                    android:id="@+id/tv_item_company"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/tv_item_location"
                    android:layout_below="@+id/tv_item_name"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="12dp"
                    android:layout_toEndOf="@+id/cv_img"
                    android:textSize="16sp"
                    tools:text="@string/github_company" />

                <ImageView
                    android:id="@+id/icon_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/cv_img"
                    android:layout_marginStart="11dp"
                    android:layout_marginBottom="6dp"
                    android:src="@drawable/ic_location" />

                <TextView
                    android:id="@+id/tv_item_location"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/icon_location"
                    android:layout_alignBottom="@+id/icon_location"
                    android:layout_alignParentEnd="true"
                    android:layout_toEndOf="@+id/icon_location"
                    android:gravity="center_vertical"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    tools:text="Location" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="236dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_itemleft"
            style="@style/DetailUser_MidCardView"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintEnd_toStartOf="@+id/cv_itemmid"
            app:layout_constraintStart_toStartOf="@+id/cv_item_user"
            app:layout_constraintTop_toBottomOf="@+id/guideline2">

            <TextView
                style="@style/DetailUser_TextMidCardContent"
                android:text="@string/repository" />

            <TextView
                android:id="@+id/tv_item_repository"
                style="@style/DetailUser_ValueMidCardContent"
                tools:text="16" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_itemmid"
            style="@style/DetailUser_MidCardView"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintEnd_toStartOf="@+id/cv_itemend"
            app:layout_constraintStart_toEndOf="@+id/cv_itemleft"
            app:layout_constraintTop_toBottomOf="@+id/guideline2">

            <TextView
                style="@style/DetailUser_TextMidCardContent"
                android:text="@string/followers" />

            <TextView
                android:id="@+id/tv_item_followers"
                style="@style/DetailUser_ValueMidCardContent"
                tools:text="0" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_itemend"
            style="@style/DetailUser_MidCardView"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintEnd_toEndOf="@+id/cv_item_user"
            app:layout_constraintStart_toEndOf="@+id/cv_itemmid"
            app:layout_constraintTop_toBottomOf="@+id/guideline2">

            <TextView
                style="@style/DetailUser_TextMidCardContent"
                android:text="@string/following" />

            <TextView
                android:id="@+id/tv_item_following"
                style="@style/DetailUser_ValueMidCardContent"
                tools:text="3" />

        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="324dp" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            app:tabTextColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline3"/>
        
        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tabs"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>